# books

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  CONTRIBUTING.md  CmakeLists.txt  ICollectionUpdateChecker.h  ITaskQueue.h  LICENSE  LICENSE.ru  LICENSE_en.txt  LICENSE_ru.txt  LICENSE_uk.txt  LinuxStart.sh  README.md  SECURITY.md  build.bat  build.sh  clang-format.bat  configure.bat  ide.bat  solution_generate.bat  solution_generate_64.bat  solution_open.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/: installers.md  release-checklist.md
doc/compare/: mhl.md
scripts/: check_cmake.bat  check_executable.bat
scripts/cmake/: target.cmake  utils.cmake
scripts/helpers/: AmalgamationBuild.cpp.in  HeaderOnlyLibraryStub.cpp.in
src/ext/: MyHomeLib.cmake  SimpleSaxParser.cmake  fmt.cmake  qss.cmake  solution_generate.bat  sqlite.cmake  ziplib.cmake
src/ext/include/: quazip  zconf.h  zlib.h
src/ext/include/Poco/: Zip.h
src/ext/sqlite/shell/: main.c  shell.c  sqlite_shell.h
src/home/: database.cmake  flibrary.cmake  flibrary_old.cmake  fnd.cmake  home.cmake  inpx.cmake  plog.cmake  util.cmake  zip.cmake
src/home/GuiUtil/: Dialog.cpp  Dialog.h  GeometryRestorable.cpp  GeometryRestorable.h  GuiUtil.cmake  ParentWidgetProvider.cpp  ParentWidgetProvider.h  UiFactory.cpp  UiFactory.h  di_gui_util.cpp  di_gui_util.h  util.cpp  util.h
src/home/GuiUtil/interface/: IDialog.h  IParentWidgetProvider.h  IUiFactory.h
src/home/common/: Constant.h  log.h  win.h
src/home/database/: database.cmake
src/home/database/factory/: Factory.cpp  Factory.h  factory.cmake
src/home/database/interface/: Command.h  Database.h  ICommand.h  IDatabase.h  IQuery.h  ITemporaryTable.h  ITransaction.h  Query.h  Transaction.h  interface.cmake
src/home/flibrary/: flibrary.cmake
src/home/flibrary/app/: app.cmake  di_app.cpp  di_app.h  flibrary.cmake  main.cpp
src/home/flibrary/gui/: AlphabetPanel.cpp  AlphabetPanel.h  AlphabetPanel.ui  AnnotationWidget.cpp  AnnotationWidget.h  AnnotationWidget.ui  AuthorAnnotationWidget.cpp  AuthorAnnotationWidget.h  AuthorAnnotationWidget.ui  AuthorReview.cpp  AuthorReview.h  AuthorReview.ui  ClickableLabel.cpp  ClickableLabel.h  CollectionCleaner.cpp  CollectionCleaner.h  CollectionCleaner.ui  FillMenu.cpp  FillMenu.h  FilterSettingsWindow.cpp  FilterSettingsWindow.h  FilterSettingsWindow.ui  GeometryRestorable.cpp  GeometryRestorable.h  ItemViewToolTipper.cpp  ItemViewToolTipper.h  LineEditDelegate.cpp  LineEditDelegate.h  LineOption.cpp  LineOption.h  LocaleController.cpp  LocaleController.h  LogItemDelegate.cpp  LogItemDelegate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Measure.cpp  Measure.h  MigrateWindow.cpp  (+28 more)
src/home/flibrary/icons/: icons.cmake  icons.qrc
src/home/flibrary/interface/: FlInt.cmake  ICollectionController.h  IUiFactory.h  Stub.cpp  interface.cmake  localization.cpp  localization.h  stub.cpp
src/home/flibrary/joke/: CatFactJokeRequester.cpp  CatPicsJokeRequester.cpp  ChuckNorrisJokeRequester.cpp  ChuckNorrisJokeRequester.h  DadJokeRequester.cpp  DogPicsJokeRequester.cpp  JokeApiJokeRequester.cpp  QuoteJokeRequester.cpp  QuotePicJokeRequester.cpp  QuotePicJokeRequester.h  SetupPunchlineJokeRequester.h  UselessFactJokeRequester.cpp  joke.cmake
src/home/flibrary/logic/: LogicFactory.cpp  LogicFactory.h  di_logic.cpp  di_logic.h  factory.cpp  factory.h  logic.cmake
src/home/flibrary/resources/: main.qrc
src/home/flibrary/src/: main.cpp
src/home/flibrary/theme/: theme.cmake  theme.qrc
src/home/flibrary/ui/: AnnotationWidget.cpp  AnnotationWidget.h  AnnotationWidget.ui  ClickableLabel.cpp  ClickableLabel.h  GeometryRestorable.cpp  GeometryRestorable.h  ItemViewToolTipper.cpp  ItemViewToolTipper.h  LocaleController.cpp  LogItemDelegate.cpp  LogItemDelegate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Measure.h  ProgressBar.cpp  ProgressBar.h  ProgressBar.ui  TreeView.cpp  TreeView.h  TreeView.ui  TreeViewDelegate.cpp  TreeViewDelegate.h  UiFactory.cpp  UiFactory.h  di_ui.cpp  di_ui.h  ui.cmake
src/home/flibrary/version/: AppVersion.cpp  AppVersion.h  build.h  inc_build_no.cmake  version.cmake
src/home/flibrary_old/src/: flibrary.cmake  main.cpp
src/home/fnd/: ConvertableT.h  EnumBitmask.h  FindPair.h  IsOneOf.h  Lockable.h  NonCopyMovable.h  ScopedCall.h  ValueGuard.h  algorithm.h  executor.h  fnd.cmake  linear.h  memory.h  observable.h  observer.h  try.h  unknown_impl.h
src/home/gutil/: Dialog.cpp  Dialog.h  GeometryRestorable.cpp  GeometryRestorable.h  ParentWidgetProvider.cpp  ParentWidgetProvider.h  UiFactory.cpp  UiFactory.h  di_gutil.cpp  di_gutil.h  gutil.cmake  util.cpp  util.h
src/home/icu/: icu.cmake  icu.cpp  icu.h
src/home/inpx/: InpxConstant.h  constant.h  inpx.cmake  inpx.cpp  inpx.h  main.cpp  types.h
src/home/interface/: ISettings.h  IUiFactory.h  interface.cmake  stub.cpp
src/home/jxl/: decode.cpp  encode.cpp  jxl.cmake  jxl.h
src/home/logging/: LogAppender.cpp  LogAppender.h  QtLoHandler.cpp  QtLoHandler.h  init.cpp  init.h  logging.cmake
src/home/network/: network.cmake
src/home/plog/: LogAppender.cpp  LogAppender.h  main.cpp
src/home/resources/locales/: CMakeLists.txt  CmakeLists.txt  en.ts  ru.ts  uk.ts
src/home/script/: build.bat  version.h.in
src/home/tool/: tool.cmake
src/home/util/: ColorUtil.cpp  ColorUtil.h  DyLib.cpp  DyLib.h  Fb2InpxParser.cpp  Fb2InpxParser.h  FunctorExecutionForwarder.cpp  FunctorExecutionForwarder.h  IExecutor.h  ISettings.h  ISettingsObserver.h  ImageUtil.cpp  ImageUtil.h  KeyboardLayout.h  LogConsoleFormatter.h  Measure.cpp  Measure.h  ObjectsConnector.cpp  ObjectsConnector.h  PlatformUtil.h  QIODeviceStreamWrapper.cpp  QIODeviceStreamWrapper.h  SaxParser.cpp  SaxParser.h  Settings.cpp  Settings.h  SettingsObserver.h  SortString.cpp  SortString.h  StrUtil.h  Stub.cpp  UiTimer.cpp  UiTimer.h  app.cpp  app.h  executor.h  files.cpp  files.h  hash.cpp  hash.h  (+8 more)
src/home/zip/: ZipArchive.cpp  ZipArchive.h  zip.cmake  zip.cpp  zip.h
src/home/zip.bak/: zip.cmake
src/home/zip/impl/: lib.h  (+18 more)
(+985 files in other folders)
